tests/expectations/compiler/constructor/calls_in_constructors_fail.out
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:10:9
     |
  10 |         foo(true);
     |         ^^^^^^^^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:11:9
     |
  11 |         bar();
     |         ^^^^^
